vpc-np-eip-update.template
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Parameters" : {

    "Provider" : {
      "Type" : "String",
      "Default" : "Provider",
      "Description" : "Provider for VPN connection - smart or broadcom"
    },

    "Environment" : {
      "Type" : "String",
      "Description" : "Tag the environment, like development, production, etc."
    }
  },
  
  "Mappings" : {
    
    "NATMap" : {
      "us-east-1"           : { "AMI" : "ami-ad227cc4" },
      "us-west-1"           : { "AMI" : "ami-d69aad93" },
      "us-west-2"           : { "AMI" : "ami-f032acc0" },
      "sa-east-1"           : { "AMI" : "ami-d78325ca" },
      "ap-southeast-2"      : { "AMI" : "ami-3bae3201" },
      "eu-west-1"           : { "AMI" : "ami-f3e30084" }
    },

    "keys" : {
          "dev"            : { "keypair" : "tbp_dev"},
          "qa"             : { "keypair" : "tbp_qa" },
          "test"             : { "keypair" : "tbp_test" },
          "sandbox"        : { "keypair" : "tbp_sandbox"},
          "production"     : { "keypair" : "tbp_prod"}
    },

    "subnets" : {
      "test"               : { "VPCSN" : "10.250.0.0/16", "PUSN" : "10.250.0.0/24", "PRSN" : "10.250.1.0/24", "GTSN" : "10.250.10.0/24", "ISSN" : "10.250.11.0/24", "DOSN" : "10.250.12.0/24", "MXSN" : "10.250.13.0/24", "SVSN" : "10.250.14.0/24" },
      "dev"                : { "VPCSN" : "10.4.0.0/16", "PUSN" : "10.4.0.0/24", "PRSN" : "10.4.1.0/24", "ISSN" : "10.4.10.0/24", "GTSN" : "10.4.11.0/24", "DOSN" : "10.4.12.0/24", "MXSN" : "10.4.13.0/24", "SVSN" : "10.4.14.0/24" },
      "qa"                 : { "VPCSN" : "10.3.0.0/16", "PUSN" : "10.3.0.0/24", "PRSN" : "10.3.1.0/24", "ISSN" : "10.3.10.0/24", "GTSN" : "10.3.11.0/24", "DOSN" : "10.3.12.0/24", "MXSN" : "10.3.13.0/24", "SVSN" : "10.3.14.0/24" },
      "sandbox"            : { "VPCSN" : "10.2.0.0/16", "PUSN" : "10.2.0.0/24", "PRSN" : "10.2.1.0/24", "ISSN" : "10.2.10.0/24", "GTSN" : "10.2.11.0/24", "DOSN" : "10.2.12.0/24", "MXSN" : "10.2.13.0/24", "SVSN" : "10.2.14.0/24" },
      "production"         : { "VPCSN" : "10.1.0.0/16", "PUSN" : "10.1.0.0/24", "PRSN" : "10.1.1.0/24", "ISSN" : "10.1.10.0/24", "GTSN" : "10.1.11.0/24", "DOSN" : "10.1.12.0/24", "MXSN" : "10.1.13.0/24", "SVSN" : "10.1.14.0/24" }
    },

    "VPN" : {
      "smart"              : { "EP" : "186.64.109.138" },
      "broadcom"           : { "EP" : "190.99.116.194" }
    },

    "dot" : {
      "test"               : { "DOT" : ".test" },
      "dev"                : { "DOT" : ".dev" },
      "qa"                 : { "DOT" : ".qa" },
      "sandbox"            : { "DOT" : ".sandbox" },
      "production"         : { "DOT" : "" }
    },

    "KernelId" : {
      "us-east-1"          : { "AKI" : "aki-919dcaf8" },
      "us-west-1"          : { "AKI" : "aki-880531cd" },
      "us-west-2"          : { "AKI" : "aki-fc8f11cc" },
      "sa-east-1"          : { "AKI" : "aki-5553f448" },
      "ap-southeast-2"     : { "AKI" : "aki-c362fff9" },
      "eu-west-1"          : { "AKI" : "aki-52a34525" }
    },

    "subnetZone" : {
      "us-west-1"           : { "ZONE" : "us-west-1c" },
      "us-west-2"           : { "ZONE" : "us-west-2b" },
      "sa-east-1"           : { "ZONE" : "sa-east-1a" },
      "us-east-1"           : { "ZONE" : "us-east-1a" },
      "ap-southeast-2"      : { "ZONE" : "ap-southeast-2a" },
      "eu-west-1"           : { "ZONE" : "eu-west-1a" }
    },
    "DnsRegion" : {
      "us-west-1"           : { "ZONE" : "us-west-1.compute.internal" },
      "us-west-2"           : { "ZONE" : "us-west-2.compute.internal" },
      "sa-east-1"           : { "ZONE" : "sa-east-1.compute.internal" },
      "us-east-1"           : { "ZONE" : "ec2.internal" },
      "eu-west-1"           : { "ZONE" : "eu-west-1.compute.internal" },
      "ap-southeast-2"      : { "ZONE" : "ap-southeast-2.compute.internal" }
    }
  },

  "Resources": {
    
    "subnetWorkerSV": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": { "Fn::FindInMap" : [ "subnets", { "Ref" : "Environment" }, "SVSN" ]},
        "AvailabilityZone": { "Fn::FindInMap" : [ "subnetZone", { "Ref" : "AWS::Region" }, "ZONE" ]},
        "VpcId": "vpc-2a5cba4f",
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join" : [ " ", ["El Salvador", { "Ref" : "Environment"} ] ] }
          },
          {
            "Key": "Application",
            "Value": "Public API"
          },
          {
            "Key": "Environment",
            "Value": { "Ref" : "Environment" }
          }
        ]
      }
    },

    "sgSVAccounts": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "El Salvador accounts applications",
        "VpcId": "vpc-2a5cba4f",

          "Tags":[
            {
            "Key": "Name",
            "Value": "El Salvador Accounts Application Security Groups"
            }
          ],
                
         "SecurityGroupIngress": [   
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "192.168.0.0/24"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "6379",
            "ToPort": "6379",
            "CidrIp": { "Fn::FindInMap" : [ "subnets", { "Ref" : "Environment" }, "VPCSN" ]}
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "6379",
            "ToPort": "6379",
            "CidrIp": "192.168.0.0/24"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": { "Fn::FindInMap" : [ "subnets", { "Ref" : "Environment" }, "VPCSN" ]}
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "192.168.0.0/24"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "11300",
            "ToPort": "11300",
            "CidrIp": { "Fn::FindInMap" : [ "subnets", { "Ref" : "Environment" }, "VPCSN" ]}
          },
                    {
            "IpProtocol": "tcp",
            "FromPort": "11300",
            "ToPort": "11300",
            "CidrIp": "192.168.0.0/24"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "53",
            "ToPort": "53",
            "CidrIp": { "Fn::FindInMap" : [ "subnets", { "Ref" : "Environment" }, "VPCSN" ]}
          },
          {
            "IpProtocol": "udp",
            "FromPort": "53",
            "ToPort": "53",
            "CidrIp": "192.168.0.0/24"
          }
        ],
       "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "subnetroute11": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": "rtb-ca8964af",
        "SubnetId": {
          "Ref": "subnetWorkerSV"
        }
      }
    },

    "ingress29": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSVAccounts"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": "sg-079b6762",
        "SourceSecurityGroupOwnerId": "243238936187"
      }
    }
  },

  "Description": "Public API VPC"
}
